Updated by OWASP Threat Dragon

--- a/ThreatDragonModels/Example WebApp threat model/Example WebApp threat model.json
+++ b/ThreatDragonModels/Example WebApp threat model/Example WebApp threat model.json
@@ -24,8 +24,8 @@
                 "height": 80
               },
               "position": {
-                "x": 21,
-                "y": 36
+                "x": 32,
+                "y": 93
               },
               "angle": 0,
               "id": "f2172ba8-05a9-4199-b793-01f6190074ca",
@@ -36,7 +36,7 @@
                   "class": "element-shape hasNoOpenThreats isInScope"
                 },
                 "text": {
-                  "text": "actor 0"
+                  "text": "privileged user"
                 },
                 ".element-text": {
                   "class": "element-text hasNoOpenThreats isInScope"
@@ -50,8 +50,8 @@
                 "height": 80
               },
               "position": {
-                "x": 29,
-                "y": 366
+                "x": 38,
+                "y": 364
               },
               "angle": 0,
               "id": "1faa5b10-a9b1-4271-baa0-96fa00d7f44b",
@@ -62,7 +62,7 @@
                   "class": "element-shape hasNoOpenThreats isInScope"
                 },
                 "text": {
-                  "text": "actor 1"
+                  "text": "user"
                 },
                 ".element-text": {
                   "class": "element-text hasNoOpenThreats isInScope"
@@ -76,8 +76,8 @@
                 "height": 100
               },
               "position": {
-                "x": 523,
-                "y": 225
+                "x": 628,
+                "y": 157
               },
               "angle": 0,
               "id": "de63f6a0-31fa-40ac-ac13-51a0acf5d26a",
@@ -88,7 +88,7 @@
                   "class": "element-shape hasNoOpenThreats isInScope"
                 },
                 "text": {
-                  "text": "process 2"
+                  "text": "app server"
                 },
                 ".element-text": {
                   "class": "element-text hasNoOpenThreats isInScope"
@@ -102,8 +102,8 @@
                 "height": 100
               },
               "position": {
-                "x": 301,
-                "y": 193
+                "x": 367,
+                "y": 192
               },
               "angle": 0,
               "id": "de5bcbd3-7f2b-4e14-bb99-9c281a5c69e8",
@@ -114,10 +114,203 @@
                   "class": "element-shape hasNoOpenThreats isInScope"
                 },
                 "text": {
-                  "text": "process 3"
+                  "text": "web server"
                 },
                 ".element-text": {
                   "class": "element-text hasNoOpenThreats isInScope"
+                }
+              }
+            },
+            {
+              "type": "tm.Store",
+              "size": {
+                "width": 160,
+                "height": 80
+              },
+              "position": {
+                "x": 631,
+                "y": 400
+              },
+              "angle": 0,
+              "id": "9d178429-9c9c-4897-ab95-6a828e5a122c",
+              "z": 7,
+              "hasOpenThreats": false,
+              "attrs": {
+                ".element-shape": {
+                  "class": "element-shape hasNoOpenThreats isInScope"
+                },
+                "text": {
+                  "text": "generic db"
+                },
+                ".element-text": {
+                  "class": "element-text hasNoOpenThreats isInScope"
+                }
+              }
+            },
+            {
+              "type": "tm.Boundary",
+              "smooth": true,
+              "source": {
+                "x": 267,
+                "y": 537
+              },
+              "target": {
+                "x": 699,
+                "y": 53
+              },
+              "vertices": [
+                {
+                  "x": 271,
+                  "y": 81
+                }
+              ],
+              "id": "a14145c1-8245-4fab-9360-662a1571482b",
+              "z": 8,
+              "attrs": {}
+            },
+            {
+              "type": "tm.Flow",
+              "smooth": true,
+              "source": {
+                "id": "de63f6a0-31fa-40ac-ac13-51a0acf5d26a"
+              },
+              "target": {
+                "id": "9d178429-9c9c-4897-ab95-6a828e5a122c"
+              },
+              "vertices": [],
+              "id": "a02cb964-150f-403b-a163-a52892ba357d",
+              "labels": [
+                {
+                  "position": 0.5,
+                  "attrs": {
+                    "text": {
+                      "text": "db query",
+                      "font-weight": "400",
+                      "font-size": "small"
+                    }
+                  }
+                }
+              ],
+              "z": 9,
+              "hasOpenThreats": false,
+              "attrs": {
+                ".marker-target": {
+                  "class": "marker-target hasNoOpenThreats isInScope"
+                },
+                ".connection": {
+                  "class": "connection hasNoOpenThreats isInScope"
+                }
+              }
+            },
+            {
+              "type": "tm.Flow",
+              "smooth": true,
+              "source": {
+                "id": "de5bcbd3-7f2b-4e14-bb99-9c281a5c69e8"
+              },
+              "target": {
+                "id": "de63f6a0-31fa-40ac-ac13-51a0acf5d26a"
+              },
+              "vertices": [],
+              "id": "804da161-6ab1-4260-aff6-4612bb758e04",
+              "labels": [
+                {
+                  "position": 0.5,
+                  "attrs": {
+                    "text": {
+                      "text": "calls",
+                      "font-weight": "400",
+                      "font-size": "small"
+                    }
+                  }
+                }
+              ],
+              "z": 10,
+              "hasOpenThreats": false,
+              "attrs": {
+                ".marker-target": {
+                  "class": "marker-target hasNoOpenThreats isInScope"
+                },
+                ".connection": {
+                  "class": "connection hasNoOpenThreats isInScope"
+                }
+              }
+            },
+            {
+              "type": "tm.Flow",
+              "smooth": true,
+              "source": {
+                "id": "1faa5b10-a9b1-4271-baa0-96fa00d7f44b"
+              },
+              "target": {
+                "id": "de5bcbd3-7f2b-4e14-bb99-9c281a5c69e8"
+              },
+              "vertices": [
+                {
+                  "x": 366,
+                  "y": 381
+                }
+              ],
+              "id": "a6ef4a45-cb4d-4aa7-a0b5-22c3a4858fbf",
+              "labels": [
+                {
+                  "position": 0.5,
+                  "attrs": {
+                    "text": {
+                      "text": "HTTP/S",
+                      "font-weight": "400",
+                      "font-size": "small"
+                    }
+                  }
+                }
+              ],
+              "z": 11,
+              "hasOpenThreats": false,
+              "attrs": {
+                ".marker-target": {
+                  "class": "marker-target hasNoOpenThreats isInScope"
+                },
+                ".connection": {
+                  "class": "connection hasNoOpenThreats isInScope"
+                }
+              }
+            },
+            {
+              "type": "tm.Flow",
+              "smooth": true,
+              "source": {
+                "id": "f2172ba8-05a9-4199-b793-01f6190074ca"
+              },
+              "target": {
+                "id": "de5bcbd3-7f2b-4e14-bb99-9c281a5c69e8"
+              },
+              "vertices": [
+                {
+                  "x": 371,
+                  "y": 115
+                }
+              ],
+              "id": "ab701852-af0a-4a44-91a4-eb4a7cd3b170",
+              "labels": [
+                {
+                  "position": 0.5,
+                  "attrs": {
+                    "text": {
+                      "text": "HTTP/S",
+                      "font-weight": "400",
+                      "font-size": "small"
+                    }
+                  }
+                }
+              ],
+              "z": 12,
+              "hasOpenThreats": false,
+              "attrs": {
+                ".marker-target": {
+                  "class": "marker-target hasNoOpenThreats isInScope"
+                },
+                ".connection": {
+                  "class": "connection hasNoOpenThreats isInScope"
                 }
               }
             }
@@ -125,7 +318,7 @@
         },
         "size": {
           "height": 590,
-          "width": 790
+          "width": 965
         }
       }
     ],
