Updated by OWASP Threat Dragon

--- a/ThreatDragonModels/Example WebApp threat model/Example WebApp threat model.json
+++ b/ThreatDragonModels/Example WebApp threat model/Example WebApp threat model.json
@@ -2,7 +2,7 @@
   "summary": {
     "title": "Example WebApp threat model",
     "owner": "The pen test monkey",
-    "description": "Basic web application used as an example and to compare with other threat model tools."
+    "description": "Basic web application used as an example and to compare with other threat model tools"
   },
   "detail": {
     "contributors": [
