Updated by OWASP Threat Dragon

--- a/ThreatDragonModels/Example WebApp threat model/Example WebApp threat model.json
+++ b/ThreatDragonModels/Example WebApp threat model/Example WebApp threat model.json
@@ -151,8 +151,8 @@
               "type": "tm.Boundary",
               "smooth": true,
               "source": {
-                "x": 267,
-                "y": 537
+                "x": 279,
+                "y": 289
               },
               "target": {
                 "x": 699,
@@ -162,6 +162,10 @@
                 {
                   "x": 271,
                   "y": 81
+                },
+                {
+                  "x": 617,
+                  "y": 52
                 }
               ],
               "id": "a14145c1-8245-4fab-9360-662a1571482b",
@@ -317,7 +321,7 @@
           ]
         },
         "size": {
-          "height": 590,
+          "height": 1497.888916015625,
           "width": 965
         }
       }
