Updated by OWASP Threat Dragon

--- a/ThreatDragonModels/Example WebApp threat model/Example WebApp threat model.json
+++ b/ThreatDragonModels/Example WebApp threat model/Example WebApp threat model.json
@@ -275,6 +275,8 @@
               ],
               "z": 11,
               "hasOpenThreats": false,
+              "protocol": "HTTP",
+              "isPublicNetwork": true,
               "attrs": {
                 ".marker-target": {
                   "class": "marker-target hasNoOpenThreats isInScope"
@@ -314,6 +316,8 @@
               ],
               "z": 12,
               "hasOpenThreats": false,
+              "isPublicNetwork": true,
+              "protocol": "HTTP",
               "attrs": {
                 ".marker-target": {
                   "class": "marker-target hasNoOpenThreats isInScope"
