--- a/ThreatDragonModels/Minimal web application/Minimal web application.json
+++ b/ThreatDragonModels/Minimal web application/Minimal web application.json
@@ -17,7 +17,115 @@
       {
         "title": "Minimal web application",
         "thumbnail": "./public/content/images/thumbnail.jpg",
-        "id": 0
+        "id": 0,
+        "diagramJson": {
+          "cells": [
+            {
+              "type": "tm.Flow",
+              "smooth": true,
+              "source": {
+                "id": "a92ced5b-a418-4cbd-80f0-c7859222458e"
+              },
+              "target": {
+                "id": "becb5fa0-f204-4de8-93a4-1d896b74e399"
+              },
+              "vertices": [],
+              "id": "32f52f14-a409-4af9-870b-08a2dbe21d8e",
+              "labels": [
+                {
+                  "position": 0.5,
+                  "attrs": {
+                    "text": {
+                      "text": "flow 0",
+                      "font-weight": "400",
+                      "font-size": "small"
+                    }
+                  }
+                }
+              ],
+              "z": 1,
+              "hasOpenThreats": false,
+              "attrs": {
+                ".marker-target": {
+                  "class": "marker-target hasNoOpenThreats isInScope"
+                },
+                ".connection": {
+                  "class": "connection hasNoOpenThreats isInScope"
+                }
+              }
+            },
+            {
+              "type": "tm.Process",
+              "size": {
+                "width": 100,
+                "height": 100
+              },
+              "position": {
+                "x": 351,
+                "y": 107
+              },
+              "angle": 0,
+              "id": "becb5fa0-f204-4de8-93a4-1d896b74e399",
+              "z": 2,
+              "hasOpenThreats": false,
+              "attrs": {
+                ".element-shape": {
+                  "class": "element-shape hasNoOpenThreats isInScope"
+                },
+                "text": {
+                  "text": "process 1"
+                },
+                ".element-text": {
+                  "class": "element-text hasNoOpenThreats isInScope"
+                }
+              }
+            },
+            {
+              "type": "tm.Actor",
+              "size": {
+                "width": 160,
+                "height": 80
+              },
+              "position": {
+                "x": 1,
+                "y": 112
+              },
+              "angle": 0,
+              "id": "a92ced5b-a418-4cbd-80f0-c7859222458e",
+              "z": 3,
+              "attrs": {
+                "text": {
+                  "text": "actor 2"
+                }
+              }
+            },
+            {
+              "type": "tm.Boundary",
+              "smooth": true,
+              "source": {
+                "x": 283,
+                "y": 303
+              },
+              "target": {
+                "x": 564,
+                "y": 49
+              },
+              "vertices": [
+                {
+                  "x": 322,
+                  "y": 65
+                }
+              ],
+              "id": "5b177697-dbec-46d2-a95f-e200933152dc",
+              "z": 4,
+              "attrs": {}
+            }
+          ]
+        },
+        "size": {
+          "height": 590,
+          "width": 790
+        }
       },
       {
         "title": "Another web application page",
