--- a/ThreatDragonModels/Simplest web app/Simplest web app.json
+++ b/ThreatDragonModels/Simplest web app/Simplest web app.json
@@ -25,7 +25,7 @@
               },
               "position": {
                 "x": 461,
-                "y": 100
+                "y": 101
               },
               "angle": 0,
               "id": "099f7d6d-bb33-4a24-bf01-6a8ebcdcc6f3",
@@ -50,15 +50,22 @@
                 "height": 80
               },
               "position": {
-                "x": 63,
+                "x": 62,
                 "y": 120
               },
               "angle": 0,
               "id": "7949a259-fefd-49a9-896a-6849e5002b91",
               "z": 2,
+              "hasOpenThreats": false,
               "attrs": {
+                ".element-shape": {
+                  "class": "element-shape hasNoOpenThreats isInScope"
+                },
                 "text": {
                   "text": "actor 1"
+                },
+                ".element-text": {
+                  "class": "element-text hasNoOpenThreats isInScope"
                 }
               }
             },
@@ -86,7 +93,15 @@
                 }
               ],
               "z": 3,
-              "attrs": {}
+              "hasOpenThreats": false,
+              "attrs": {
+                ".marker-target": {
+                  "class": "marker-target hasNoOpenThreats isInScope"
+                },
+                ".connection": {
+                  "class": "connection hasNoOpenThreats isInScope"
+                }
+              }
             },
             {
               "type": "tm.Boundary",
