--- a/ThreatDragonModels/Multi-page web application/Multi-page web application.json
+++ b/ThreatDragonModels/Multi-page web application/Multi-page web application.json
@@ -144,9 +144,16 @@
         }
       },
       {
-        "title": "Another web application page",
+        "title": "Web application - second page",
         "thumbnail": "./public/content/images/thumbnail.jpg",
-        "id": 1
+        "id": 1,
+        "diagramJson": {
+          "cells": []
+        },
+        "size": {
+          "height": 590,
+          "width": 790
+        }
       }
     ],
     "reviewer": "The reviewer"
