Updated by OWASP Threat Dragon

--- a/ThreatDragonModels/Multi-page web application/Multi-page web application.json
+++ b/ThreatDragonModels/Multi-page web application/Multi-page web application.json
@@ -148,7 +148,34 @@
         "thumbnail": "./public/content/images/thumbnail.jpg",
         "id": 1,
         "diagramJson": {
-          "cells": []
+          "cells": [
+            {
+              "type": "tm.Process",
+              "size": {
+                "width": 100,
+                "height": 100
+              },
+              "position": {
+                "x": 50,
+                "y": 50
+              },
+              "angle": 0,
+              "id": "e9428edb-c997-4725-9ae0-ca3cf0b7531a",
+              "z": 1,
+              "hasOpenThreats": false,
+              "attrs": {
+                ".element-shape": {
+                  "class": "element-shape hasNoOpenThreats isInScope"
+                },
+                "text": {
+                  "text": "process 0"
+                },
+                ".element-text": {
+                  "class": "element-text hasNoOpenThreats isInScope"
+                }
+              }
+            }
+          ]
         },
         "size": {
           "height": 590,
