Updated by OWASP Threat Dragon

--- a/ThreatDragonModels/Multi-page web application/Multi-page web application.json
+++ b/ThreatDragonModels/Multi-page web application/Multi-page web application.json
@@ -2,7 +2,7 @@
   "summary": {
     "title": "Multi-page web application",
     "owner": "The owner",
-    "description": "Used to start testing mongoDB with multiple pages"
+    "description": "Used to start testing mongoDB with multiple pages\nand as a demonstration"
   },
   "detail": {
     "contributors": [
