--- a/ThreatDragonModels/Multi-page web application/Multi-page web application.json
+++ b/ThreatDragonModels/Multi-page web application/Multi-page web application.json
@@ -174,6 +174,32 @@
                   "class": "element-text hasNoOpenThreats isInScope"
                 }
               }
+            },
+            {
+              "type": "tm.Actor",
+              "size": {
+                "width": 160,
+                "height": 80
+              },
+              "position": {
+                "x": 268,
+                "y": 91
+              },
+              "angle": 0,
+              "id": "0a38ad21-a823-4885-b1fe-a2b1aec53297",
+              "z": 2,
+              "hasOpenThreats": false,
+              "attrs": {
+                ".element-shape": {
+                  "class": "element-shape hasNoOpenThreats isInScope"
+                },
+                "text": {
+                  "text": "actor 1"
+                },
+                ".element-text": {
+                  "class": "element-text hasNoOpenThreats isInScope"
+                }
+              }
             }
           ]
         },
